# afinewinedynasty

./: .env.example  .env.railway  .gitignore  .railway-deployment-info.md  COLLECTION_RUNNING.md  COLLECTION_STATUS.md  COMPOSITE_RANKINGS_IMPLEMENTATION_SUMMARY.md  COMPOSITE_RANKINGS_UI_IMPROVEMENTS.md  DATA_EXPORT_README.md  DEPLOY_NOW.md  EXECUTIVE_SUMMARY.md  EXPORT_COMPLETE_SUMMARY.md  FANTRAX_AUTH_FIX_SUMMARY.md  FANTRAX_AUTH_SETUP.md  FINAL_INTEGRATION_STATUS.md  FINAL_SUMMARY.md  FIX_HYPE_PROSPECTS_ONLY.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_PERFORMANCE_BREAKDOWN_UPDATE.md  GOOGLE_TRENDS_FINDINGS.md  GOOGLE_TRENDS_STRATEGY.md  MIXED_CONTENT_FIX.md  MIXED_CONTENT_FIX_SUMMARY.md  MLB_PLAYER_ID_SETUP.md  OAUTH_LINEUP_IMPLEMENTATION.md  PERCENTILE_RANKING_SYSTEM.md  PITCH_BY_PITCH_REVIEW_SUMMARY.md  PITCH_COLLECTION_READY_TO_RUN.md  PITCH_COLLECTION_STATUS.md  PLAYWRIGHT_AUTH_IMPLEMENTATION.md  PROJECTION_DISPLAY_DEBUG.md  RAILWAY_CORS_SETUP.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_ENV_FIX.md  RAILWAY_OAUTH_SETUP.md  README_API_TESTING.md  SETUP.md  TABLE_EXPANSION_IMPROVEMENTS.md  api_validation_suite.py  (+12 more)
apps/api/: .env.example  =2.0.0  BACKFILL_EXECUTION_GUIDE.md  BACKFILL_RESULTS_SUMMARY.md  BACKFILL_STRATEGY.md  BROWSER_AUTOMATION_OPTIONS.md  BROWSER_AUTOMATION_QUICKSTART.md  BRYCE_ELDRIDGE_INVESTIGATION_FINAL_REPORT.md  CLEAR_CACHE_INSTRUCTIONS.md  COLLECTION_SCRIPTS_UPDATE_SUMMARY.md  COLLECTION_STATUS.md  COLLECTION_SUCCESS_REPORT.md  COLLECTION_SUCCESS_SUMMARY.md  COMPOSITE_RANKINGS_UPDATE_GUIDE.md  DATA_COLLECTION_DIAGNOSIS.md  (+310 more)
(+1103 files in other folders)
